--- a/Car-CRUD/src/main/resources/application.properties
+++ b/Car-CRUD/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Configure datasource
 quarkus.datasource.db-kind=h2
-quarkus.datasource.username=admin
-quarkus.datasource.jdbc.url=jdbc:h2:mem:car
+quarkus.datasource.jdbc.url=jdbc:h2:mem:default;DB_CLOSE_DELAY=-1
+
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.log.sql=true
